--- a/.github/workflows/nodejs-ci.yaml
+++ b/.github/workflows/nodejs-ci.yaml
@@ -30,7 +30,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, ubuntu-latest]
+        os: [macos-latest, ubuntu-latest, windows-latest]
         node-version: [12.x, 14.x]
 
     steps:
