--- a/.github/workflows/nodejs-ci.yaml
+++ b/.github/workflows/nodejs-ci.yaml
@@ -7,6 +7,7 @@ on: push
 
 jobs:
   lint:
+    name: Lint
     runs-on: ubuntu-latest
 
     steps:
@@ -21,7 +22,39 @@ jobs:
       - name: Lint
         run: yarn lint
 
+  test-libs:
+    name: Test - core, schema, legacy-scripting-runner
+    runs-on: ubuntu-latest
+    environment: ci
+    env:
+      ZAPIER_DEPLOY_KEY: ${{ secrets.ZAPIER_DEPLOY_KEY }}
+      TEST_APP_ID: ${{ secrets.TEST_APP_ID }}
+
+    strategy:
+      matrix:
+        node-version: [12.x, 14.x]
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: yarn
+      - name: Install dependencies
+        run: yarn --frozen-lockfile
+      - name: Test - core
+        run: yarn test
+        working-directory: packages/core
+      - name: Test - schema
+        run: yarn test
+        working-directory: packages/schema
+      - name: Test - legacy-scripting-runner
+        run: yarn test
+        working-directory: packages/legacy-scripting-runner
+
   test-cli:
+    name: Test - cli
     runs-on: ${{ matrix.os }}
     environment: ci
     env:
@@ -42,11 +75,12 @@ jobs:
           cache: yarn
       - name: Install dependencies
         run: yarn --frozen-lockfile
-      - name: Test
+      - name: Test - cli
         run: yarn test
         working-directory: packages/cli
 
-  test-core:
+  smoke-test-libs:
+    name: Smoke test - core, schema, legacy-scripting-runner
     runs-on: ubuntu-latest
     environment: ci
     env:
@@ -66,35 +100,18 @@ jobs:
           cache: yarn
       - name: Install dependencies
         run: yarn --frozen-lockfile
-      - name: Test
-        run: yarn test
+      - name: Smoke test - core
+        run: yarn smoke-test
         working-directory: packages/core
-
-  test-schema:
-    runs-on: ubuntu-latest
-    environment: ci
-    env:
-      ZAPIER_DEPLOY_KEY: ${{ secrets.ZAPIER_DEPLOY_KEY }}
-      TEST_APP_ID: ${{ secrets.TEST_APP_ID }}
-
-    strategy:
-      matrix:
-        node-version: [12.x, 14.x]
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: yarn
-      - name: Install dependencies
-        run: yarn --frozen-lockfile
-      - name: Test
-        run: yarn test
+      - name: Smoke test - schema
+        run: yarn smoke-test
         working-directory: packages/schema
+      - name: Smoke test - legacy-scripting-runner
+        run: yarn smoke-test
+        working-directory: packages/legacy-scripting-runner
 
   smoke-test-cli:
+    name: Smoke test - cli
     runs-on: ${{ matrix.os }}
 
     environment: ci
@@ -104,7 +121,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, ubuntu-latest]
+        os: [macos-latest, ubuntu-latest, windows-latest]
         node-version: [12.x, 14.x]
 
     steps:
@@ -116,54 +133,6 @@ jobs:
           cache: yarn
       - name: Install dependencies
         run: yarn --frozen-lockfile
-      - name: Smoke test
+      - name: Smoke test - cli
         run: yarn smoke-test
         working-directory: packages/cli
-
-  smoke-test-core:
-    runs-on: ubuntu-latest
-    environment: ci
-    env:
-      ZAPIER_DEPLOY_KEY: ${{ secrets.ZAPIER_DEPLOY_KEY }}
-      TEST_APP_ID: ${{ secrets.TEST_APP_ID }}
-
-    strategy:
-      matrix:
-        node-version: [12.x, 14.x]
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: yarn
-      - name: Install dependencies
-        run: yarn --frozen-lockfile
-      - name: Smoke test
-        run: yarn smoke-test
-        working-directory: packages/core
-
-  smoke-test-schema:
-    runs-on: ubuntu-latest
-    environment: ci
-    env:
-      ZAPIER_DEPLOY_KEY: ${{ secrets.ZAPIER_DEPLOY_KEY }}
-      TEST_APP_ID: ${{ secrets.TEST_APP_ID }}
-
-    strategy:
-      matrix:
-        node-version: [12.x, 14.x]
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: yarn
-      - name: Install dependencies
-        run: yarn --frozen-lockfile
-      - name: Smoke test
-        run: yarn smoke-test
-        working-directory: packages/schema
