--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -46,6 +46,7 @@
     "dotenv": "9.0.2",
     "form-data": "4.0.0",
     "lodash": "4.17.21",
+    "mime-types": "2.1.34",
     "node-fetch": "2.6.1",
     "oauth-sign": "0.9.0",
     "semver": "7.3.5",
@@ -54,6 +55,7 @@
   "devDependencies": {
     "adm-zip": "0.5.5",
     "aws-sdk": "^2.905.0",
+    "dicer": "^0.3.0",
     "fs-extra": "^10.0.0",
     "mock-fs": "^4.14.0"
   },
