--- a/packages/legacy-scripting-runner/package.json
+++ b/packages/legacy-scripting-runner/package.json
@@ -30,6 +30,7 @@
     "jsdom": "7.0.0",
     "lodash": "4.17.21",
     "moment-timezone": "0.5.28",
+    "node-fetch": "2.6.7",
     "request": "2.88.2",
     "underscore": "1.4.4",
     "xmldom": "0.3.0"
