--- a/packages/legacy-scripting-runner/package.json
+++ b/packages/legacy-scripting-runner/package.json
@@ -24,7 +24,6 @@
   },
   "dependencies": {
     "async": "2.6.1",
-    "deasync": "0.1.21",
     "flat": "4.1.0",
     "jquery": "2.1.4",
     "jsdom": "7.0.0",
@@ -32,6 +31,7 @@
     "moment-timezone": "0.5.28",
     "node-fetch": "2.6.7",
     "request": "2.88.2",
+    "synckit": "0.6.0",
     "underscore": "1.4.4",
     "xmldom": "0.3.0"
   },
