Adding README-source.md to .prettierignore to prevent Prettier from changing output structure of README

--- a/.prettierignore
+++ b/.prettierignore
@@ -3,4 +3,5 @@ package.json
 package-lock.json
 packages/cli/snippets/next.js
 packages/cli/src/generators/templates/
+packages/cli/README-source.md
 .yarn
