--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -40,6 +40,7 @@
   },
   "engineStrict": true,
   "dependencies": {
+    "@aws-sdk/client-sqs": "^3.201.0",
     "@zapier/secret-scrubber": "^1.0.7",
     "bluebird": "3.7.2",
     "content-disposition": "0.5.3",
