add --exit and more readable timeout syntax to package.json mocha calls

--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -14,9 +14,9 @@
   ],
   "scripts": {
     "preversion": "git pull && yarn test && yarn build",
-    "test": "mocha -t 10000 --recursive test",
-    "smoke-test": "mocha -t 10000 --recursive smoke-test",
-    "test:debug": "mocha -t 5-10000 --recursive --inspect-brk test",
+    "test": "mocha -t 10s --recursive test --exit",
+    "smoke-test": "mocha -t 10s --recursive smoke-test --exit",
+    "test:debug": "mocha --recursive --inspect-brk test",
     "lint": "eslint lib",
     "lint:fix": "eslint --fix lib",
     "coverage": "istanbul cover _mocha -- --recursive",
