--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -31,8 +31,8 @@
     "postversion": "git push && git push --tags",
     "lint": "eslint src snippets",
     "lint:fix": "eslint --fix src snippets",
-    "test": "cross-env NODE_ENV=test mocha -t 50000 --recursive src/tests",
-    "smoke-test": "cross-env NODE_ENV=test mocha -t 120000 --recursive src/smoke-tests",
+    "test": "cross-env NODE_ENV=test mocha -t 50s --recursive src/tests --exit",
+    "smoke-test": "cross-env NODE_ENV=test mocha -t 2m --recursive src/smoke-tests --exit",
     "validate-templates": "./scripts/validate-app-templates.js",
     "set-template-versions": "./scripts/set-app-template-versions.js",
     "validate": "yarn test && yarn smoke-test && yarn lint"
