--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,7 +18,7 @@
     "preversion": "git pull && yarn test",
     "version": "node bin/bump-dependencies.js && yarn && git add package.json yarn.lock",
     "postversion": "git push && git push --tags",
-    "main-tests": "mocha -t 20s --recursive test",
+    "main-tests": "mocha -t 20s --recursive test --exit",
     "solo-test": "test $(OPT_OUT_PATCH_TEST_ONLY=yes mocha --recursive test -g 'should be able to opt out of patch' -R json | jq '.stats.passes') -eq 1 && echo 'Ran 1 test and it passed!'",
     "test": "yarn main-tests && yarn solo-test",
     "debug": "mocha -t 10s --inspect-brk --recursive test",
