--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "devDependencies": {
     "chalk": "^4.1.1",
     "cross-env": "^7.0.3",
-    "eslint": "^7.26.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-mocha": "^8.1.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
+    "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-mocha": "^9.0.0",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-standard": "^5.0.0",
-    "husky": "^6.0.0",
+    "husky": "^7.0.4",
     "inquirer": "^8.0.0",
-    "lerna": "^4.0.0",
-    "lint-staged": "^11.0.0",
-    "mocha": "^8.4.0",
-    "prettier": "^2.3.0",
-    "semver": "^7.3.5",
+    "lerna": "^6.4.1",
+    "lint-staged": "^11.2.6",
+    "mocha": "^10.2.0",
+    "prettier": "^2.8.3",
+    "semver": "^7.3.8",
     "should": "^13"
   },
   "workspaces": [
