replace browserify for dependency-tree

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -45,10 +45,10 @@
     "@oclif/plugin-not-found": "1.2.4",
     "adm-zip": "0.5.10",
     "archiver": "5.3.1",
-    "browserify": "17.0.0",
     "cli-table3": "0.6.3",
     "colors": "1.4.0",
     "debug": "4.3.4",
+    "dependency-tree": "9.0.0",
     "fs-extra": "10.0.0",
     "gulp-filter": "7.0.0",
     "gulp-prettier": "4.0.0",
@@ -66,7 +66,6 @@
     "read": "2.0.0",
     "semver": "7.3.8",
     "string-length": "4.0.2",
-    "through2": "4.0.2",
     "tmp": "0.2.1",
     "update-notifier": "5.1.0",
     "yeoman-environment": "3.3.0",
