--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
 # these are the root owners and will be tagged for every PR
-* @xavdid @eliangcs
+* @eliangcs @rnegron
 
 # more specific owners can go down here if we want to match certain parts of the codebase, such as legacy-scripting-runner
