--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -74,6 +74,8 @@
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.26.10",
+    "@oclif/test": "^1.2.9",
+    "chai": "^4.3.7",
     "decompress": "4.2.1",
     "litdoc": "1.5.6",
     "markdown-toc": "^1",
