--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -106,6 +106,9 @@
       ]
     },
     "topics": {
+      "cache": {
+        "description": "Interact with your integration's cache data."
+      },
       "delete": {
         "description": "Delete your entire integration or a specific integration version."
       },
