--- a/example-apps/github/package.json
+++ b/example-apps/github/package.json
@@ -18,6 +18,7 @@
     "zapier-platform-core": "15.1.0"
   },
   "devDependencies": {
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "nock": "^13.1.3"
   }
 }
