--- a/example-apps/typescript/package.json
+++ b/example-apps/typescript/package.json
@@ -17,6 +17,7 @@
     "jest": "^25.5.3",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.13.5",
+    "@types/node-fetch": "^2.6.11",
     "rimraf": "^3.0.2",
     "typescript": "^4.9.4"
   },
