--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -60,7 +60,8 @@
     "aws-sdk": "^2.1397.0",
     "dicer": "^0.3.1",
     "fs-extra": "^11.1.1",
-    "mock-fs": "^5.2.0"
+    "mock-fs": "^5.2.0",
+    "nock": "^13.5.4"
   },
   "optionalDependencies": {
     "@types/node": "^20.3.1"
