Improve compiler to be better DevPlatform citizen
This improves the CLI of the schema-compiler to use the input json and
output typescript to sensible defaults within the repo, and makes a
bunch of changes that improve the logging, command line options and
features, and improves the quality of the final output typescript.

--- a/packages/schema-to-ts/package.json
+++ b/packages/schema-to-ts/package.json
@@ -9,11 +9,10 @@
   "scripts": {
     "test": "vitest",
     "clean": "rm -rf dist",
-    "prebuild": "npm run clean",
+    "prebuild": "yarn clean",
     "build": "tsc",
-    "generate-platform-types": "node ./dist/cli.js --schema-json ../schema/exported-schema.json",
-    "generate-platform-types:build": "yarn build && yarn generate-platform-types"
-    ,"foo": "yarn schema-to-ts"
+    "generate-types": "node ./dist/cli.js --schema-json ../schema/exported-schema.json",
+    "generate-types:build": "yarn build && yarn generate-types"
   },
   "dependencies": {
     "commander": "^12.1.0",
