Abstract zpc types to module to include code-gen
This moves the `index.d.ts` into a `types/` directory and renames it to
zapier.custom.d.ts. Then a new `index.d.ts` file has been added, that
imports from both this hand-written new module, and the generated
sibling module, unifying the imports.
With any luck, this commit should include the generated typings because
of the pre-commit hooks.

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,12 +7,12 @@
   "author": "Zapier Engineering <contact@zapier.com>",
   "license": "SEE LICENSE IN LICENSE",
   "main": "index.js",
-  "typings": "index.d.ts",
+  "types": "types/index.d.ts",
   "files": [
     "/include/",
-    "/index.d.ts",
     "/index.js",
-    "/src/"
+    "/src/",
+    "/types/"
   ],
   "scripts": {
     "preversion": "git pull && yarn test",
