--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "lint-examples": "eslint examples",
     "validate": "lerna run validate",
     "bump": "./scripts/bump.js",
-    "prepare": "husky install",
-    "generate-schema-dts": "yarn workspace zapier-platform-core generate-schema-dts"
+    "prepare": "husky install"
   },
   "husky": {
     "hooks": {
