--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -33,8 +33,7 @@
     "build-integration-test": "bin/build.sh local.bundle.zip",
     "upload-integration-test": "bin/upload-lambda.js local.bundle.zip",
     "deploy-integration-test": "yarn build-integration-test && yarn upload-integration-test",
-    "validate": "yarn test && yarn smoke-test && yarn lint",
-    "generate-schema-dts": "zapier-schema-to-ts"
+    "validate": "yarn test && yarn smoke-test && yarn lint"
   },
   "engines": {
     "node": ">=16",
