--- a/packages/schema-to-ts/package.json
+++ b/packages/schema-to-ts/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "commander": "^12.1.0",
     "deepmerge": "^4.3.1",
-    "json-schema-to-typescript": "^13.1.2",
+    "json-schema-to-typescript": "14.1.0",
     "marked": "^12.0.2",
     "pino": "^9.1.0",
     "pino-pretty": "^11.0.0",
