--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -19,8 +19,9 @@
     "version": "node bin/bump-dependencies.js && yarn && git add package.json yarn.lock",
     "postversion": "git push && git push --tags",
     "main-tests": "mocha -t 20s --recursive test --exit",
+    "type-tests": "tsd",
     "solo-test": "test $(OPT_OUT_PATCH_TEST_ONLY=yes mocha --recursive test -g 'should be able to opt out of patch' -R json | jq '.stats.passes') -eq 1 && echo 'Ran 1 test and it passed!'",
-    "test": "yarn main-tests && yarn solo-test",
+    "test": "yarn main-tests && yarn solo-test && yarn type-tests",
     "test:debug": "mocha inspect -t 10s --recursive test",
     "debug": "mocha -t 10s --inspect-brk --recursive test",
     "test:w": "mocha -t 10s --recursive test --watch",
@@ -61,7 +62,8 @@
     "dicer": "^0.3.1",
     "fs-extra": "^11.1.1",
     "mock-fs": "^5.2.0",
-    "nock": "^13.5.4"
+    "nock": "^13.5.4",
+    "tsd": "^0.31.1"
   },
   "optionalDependencies": {
     "@types/node": "^20.3.1"
