--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "packages/*"
   ],
   "scripts": {
-    "test": "yarn workspaces run test",
+    "test": "yarn workspaces run test && (cd schema-to-ts && yarn test)",
     "smoke-test": "yarn workspace zapier-platform-cli run smoke-test && yarn workspace zapier-platform-core run smoke-test && yarn workspace zapier-platform-schema run smoke-test",
     "lint": "lerna run lint",
     "lint:fix": "lerna run lint:fix",
