Add post-install hooks to core and schema for TS compilation
Based on Raúl's advice, so that the schema-to-ts tool is ready after a
standard `yarn` invocation even from the root to install dependencies.

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,6 +15,7 @@
     "/types/"
   ],
   "scripts": {
+    "postinstall": "cd ../../schema-to-ts && yarn install",
     "preversion": "git pull && yarn test",
     "version": "node bin/bump-dependencies.js && yarn && git add package.json yarn.lock",
     "postversion": "git push && git push --tags",
