change yarn working directory in CI to schema-to-ts

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -63,6 +63,7 @@ jobs:
           cache: yarn
       - name: Install dependencies
         run: yarn --frozen-lockfile
+        working-directory: schema-to-ts
       - name: Test - schema-to-ts
         run: yarn test
         working-directory: schema-to-ts
