PDE-4968 feat(schema-to-ts) - Introduce the Schema-to-TS compiler (#818)
* Add schema-to-ts compiler as new package

* Add commands and scripts to generate typings

* Format compiler with repo's prettier (i.e single quotes)

* Remove ZPC and ZPS dependencies from schema-to-ts

* Improve compiler to be better DevPlatform citizen

This improves the CLI of the schema-compiler to use the input json and
output typescript to sensible defaults within the repo, and makes a
bunch of changes that improve the logging, command line options and
features, and improves the quality of the final output typescript.

* Abstract zpc types to module to include code-gen

This moves the `index.d.ts` into a `types/` directory and renames it to
zapier.custom.d.ts. Then a new `index.d.ts` file has been added, that
imports from both this hand-written new module, and the generated
sibling module, unifying the imports.
With any luck, this commit should include the generated typings because
of the pre-commit hooks.

* Improve compiler command line arguments

* Abstract snippets with a builder function

* Pre-PR cleanup & commenting

* Switch to single quote formatting for schema types

* Extract compiler logic from CLI to main.ts for easier testing

* Move PerformFunction definition to zapier.custom.d.ts

* Remove serialised code formats for FunctionSchema, alias PerformFunction

* Don't generate PerformFunction with compiler, use from custom types

* Bump to json-schema-to-typescript fro, v13 -> v14

This also pins the version, and updates (just a type) imported from the
swapped out @bcherny/json-schema-ref-parser repo to
@apidevtools/json-schema-ref-parser

* Move schema-to-ts to root

The root was chosen instead of ./tools or such because there are no
other tools currently.

* Adjust yarn commands for new schema-to-ts location

* Add husky commands to build schema types

* Add README for schema-to-ts

* Update code generation comments


--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -50,6 +50,24 @@ jobs:
         run: yarn test
         working-directory: packages/legacy-scripting-runner
 
+  test-schema-to-ts:
+    name: Test - schema-to-ts
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+          cache: yarn
+      - name: Install dependencies
+        run: yarn --frozen-lockfile
+        working-directory: schema-to-ts
+      - name: Test - schema-to-ts
+        run: yarn test
+        working-directory: schema-to-ts
+
   test-cli:
     name: Test - cli
     runs-on: ${{ matrix.os }}
