--- a/package.json
+++ b/package.json
@@ -25,18 +25,19 @@
     "packages/*"
   ],
   "scripts": {
-    "test": "yarn workspaces run test",
+    "test": "yarn workspaces run test && (cd schema-to-ts && yarn test)",
     "smoke-test": "yarn workspace zapier-platform-cli run smoke-test && yarn workspace zapier-platform-core run smoke-test && yarn workspace zapier-platform-schema run smoke-test",
     "lint": "lerna run lint",
     "lint:fix": "lerna run lint:fix",
     "lint-examples": "eslint examples",
     "validate": "lerna run validate",
     "bump": "./scripts/bump.js",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "generate-types": "cd schema-to-ts && yarn generate-types:build"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lerna run --stream precommit && lint-staged"
+      "pre-commit": "lerna run --stream precommit && yarn generate-types && lint-staged"
     }
   },
   "lint-staged": {
