--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -46,10 +46,10 @@
     "@oclif/plugin-not-found": "1.2.4",
     "adm-zip": "0.5.10",
     "archiver": "5.3.1",
-    "browserify": "17.0.0",
     "cli-table3": "0.6.3",
     "colors": "1.4.0",
     "debug": "4.3.4",
+    "dependency-tree": "^11.0.1",
     "fs-extra": "11.1.1",
     "gulp-filter": "7.0.0",
     "gulp-prettier": "4.0.0",
