--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -49,7 +49,7 @@
     "cli-table3": "0.6.3",
     "colors": "1.4.0",
     "debug": "4.3.4",
-    "dependency-tree": "^11.0.1",
+    "esbuild": "^0.23.0",
     "fs-extra": "11.1.1",
     "gulp-filter": "7.0.0",
     "gulp-prettier": "4.0.0",
