--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -50,7 +50,7 @@
     "lodash": "4.17.21",
     "mime-types": "2.1.35",
     "node-abort-controller": "3.1.1",
-    "node-fetch": "2.6.7",
+    "node-fetch": "^3.3.2",
     "oauth-sign": "0.9.0",
     "semver": "7.5.2",
     "zapier-platform-schema": "15.11.1"
