--- a/example-apps/typescript/package.json
+++ b/example-apps/typescript/package.json
@@ -2,24 +2,20 @@
   "name": "typescript",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "npm run build && jest --testTimeout 10000 --rootDir ./lib/test",
+    "test": "vitest",
     "build": "npm run clean && tsc",
-    "clean": "rimraf ./lib ./build",
-    "watch": "npm run clean && tsc --watch",
+    "clean": "rimraf ./dist ./build",
     "_zapier-build": "npm run build"
   },
   "dependencies": {
     "zapier-platform-core": "15.12.0"
   },
   "devDependencies": {
-    "jest": "^25.5.3",
-    "@types/jest": "^25.2.1",
-    "@types/node": "^13.13.5",
-    "@types/node-fetch": "^2.6.11",
-    "rimraf": "^3.0.2",
-    "typescript": "^5.5.3"
+    "rimraf": "^6.0.1",
+    "typescript": "^5.5.4",
+    "vitest": "^2.0.5"
   },
   "private": true
 }
