Implement `auth start` for OAuth2

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -50,6 +50,7 @@
     "cli-table3": "0.6.3",
     "colors": "1.4.0",
     "debug": "4.3.4",
+    "express": "^4.19.2",
     "fs-extra": "11.1.1",
     "gulp-filter": "7.0.0",
     "gulp-prettier": "4.0.0",
@@ -62,6 +63,7 @@
     "marked-terminal": "5.2.0",
     "minimatch": "9.0.3",
     "node-fetch": "2.6.7",
+    "open": "^10.1.0",
     "ora": "5.4.0",
     "parse-gitignore": "0.5.1",
     "prettier": "2.8.8",
