--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -50,6 +50,7 @@
     "cli-table3": "0.6.3",
     "colors": "1.4.0",
     "debug": "4.3.4",
+    "dotenv": "16.4.5",
     "fs-extra": "11.1.1",
     "gulp-filter": "7.0.0",
     "gulp-prettier": "4.0.0",
