Handle datetime field

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -47,6 +47,7 @@
     "adm-zip": "0.5.10",
     "archiver": "5.3.1",
     "browserify": "17.0.0",
+    "chrono-node": "2.7.7",
     "cli-table3": "0.6.3",
     "colors": "1.4.0",
     "debug": "4.3.4",
@@ -59,6 +60,7 @@
     "jscodeshift": "0.15.0",
     "klaw": "4.1.0",
     "lodash": "4.17.21",
+    "luxon": "3.5.0",
     "marked": "4.2.12",
     "marked-terminal": "5.2.0",
     "minimatch": "9.0.3",
