--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -65,6 +65,7 @@
     "marked-terminal": "5.2.0",
     "minimatch": "9.0.3",
     "node-fetch": "2.6.7",
+    "open": "10.1.0",
     "ora": "5.4.0",
     "parse-gitignore": "0.5.1",
     "prettier": "2.8.8",
