--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -83,11 +83,13 @@
   "devDependencies": {
     "@oclif/dev-cli": "^1.26.10",
     "@oclif/test": "^1.2.9",
+    "@types/mocha": "^10.0.9",
     "chai": "^4.3.7",
     "decompress": "4.2.1",
     "mock-fs": "^5.2.0",
     "nock": "^13.3.1",
     "stdout-stderr": "0.1.13",
+    "typescript": "^5.6.3",
     "yamljs": "0.3.0"
   },
   "bin": {
