--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "docs": "ZAPIER_BASE_ENDPOINT='' node scripts/docs.js && cp -r docs ../..",
     "preversion": "git pull && yarn validate",
-    "prepack": "oclif-dev manifest",
+    "prepack": "oclif manifest",
     "postpack": "rm -f oclif.manifest.json",
     "precommit": "yarn docs && git add docs README.md ../../docs",
     "version": "yarn docs && git add docs/* README.md",
@@ -40,11 +40,11 @@
     "validate": "yarn test && yarn smoke-test && yarn lint"
   },
   "dependencies": {
-    "@oclif/command": "1.8.27",
-    "@oclif/config": "1.18.10",
-    "@oclif/plugin-autocomplete": "0.3.0",
-    "@oclif/plugin-help": "3.2.20",
-    "@oclif/plugin-not-found": "1.2.4",
+    "@oclif/core": "4.0.28",
+    "@oclif/plugin-autocomplete": "3.2.6",
+    "@oclif/plugin-help": "6.2.15",
+    "@oclif/plugin-not-found": "3.2.22",
+    "@oclif/plugin-version": "2.2.15",
     "adm-zip": "0.5.10",
     "archiver": "5.3.1",
     "browserify": "17.0.0",
@@ -81,8 +81,7 @@
     "yeoman-generator": "5.9.0"
   },
   "devDependencies": {
-    "@oclif/dev-cli": "^1.26.10",
-    "@oclif/test": "^1.2.9",
+    "@oclif/test": "^4.0.9",
     "chai": "^4.3.7",
     "decompress": "4.2.1",
     "litdoc": "1.5.6",
@@ -90,6 +89,7 @@
     "mock-fs": "^5.2.0",
     "nock": "^13.3.1",
     "stdout-stderr": "0.1.13",
+    "oclif": "^4.15.1",
     "yamljs": "0.3.0"
   },
   "bin": {
@@ -97,20 +97,24 @@
   },
   "oclif": {
     "commands": "src/oclif/commands",
+    "additionalHelpFlags": ["-h"],
+    "additionalVersionFlags": ["-v"],
     "bin": "zapier",
+    "dirname": "zapier",
     "plugins": [
-      "@oclif/plugin-help",
-      "@oclif/plugin-not-found",
-      "@oclif/plugin-autocomplete"
+        "@oclif/plugin-autocomplete",
+        "@oclif/plugin-help",
+        "@oclif/plugin-not-found",
+        "@oclif/plugin-version"
     ],
     "hooks": {
       "init": [
-        "./src/oclif/hooks/versionInfo",
-        "./src/oclif/hooks/deprecated",
-        "./src/oclif/hooks/updateNotifier",
         "./src/oclif/hooks/checkValidNodeVersion",
+        "./src/oclif/hooks/deprecated",
+        "./src/oclif/hooks/getAppRegistrationFieldChoices",
         "./src/oclif/hooks/renderMarkdownHelp",
-        "./src/oclif/hooks/getAppRegistrationFieldChoices"
+        "./src/oclif/hooks/updateNotifier",
+        "./src/oclif/hooks/versionInfo"
       ]
     },
     "topics": {
