--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -83,6 +83,7 @@
   "devDependencies": {
     "@oclif/dev-cli": "^1.26.10",
     "@oclif/test": "^1.2.9",
+    "@types/jscodeshift": "^0.12.0",
     "@types/mocha": "^10.0.9",
     "chai": "^4.3.7",
     "decompress": "4.2.1",
