Revert "run prettier with trailingComma: es5"
This reverts commit df8a16f5c4348a3be5d4ffeb2feb1a9822fa8ec9.

--- a/package.json
+++ b/package.json
@@ -46,11 +46,10 @@
       "eslint --fix --quiet"
     ],
     "*.{js,json}": [
-      "prettier --write --ignore-path=.prettierignore"
+      "prettier --write"
     ]
   },
   "prettier": {
-    "singleQuote": true,
-    "trailingComma": "es5"
+    "singleQuote": true
   }
 }
