BREAKING CHANGE(all): [v16] Bump dependency package versions (#926)
* bumping oclif packages

* bump more packages

* upgrade Yeoman enviornment to latest v3

* dotenv added a package.json

* more package upgrades

* use promises instead of callback

* revert jsonschema upgrade as it breaks a test

* bump

* upgrade Lerna to v8

* upgrade prettier to latest v3

* run prettier with trailingComma: es5

* upgrade husky

* husky followups

* Revert "upgrade prettier to latest v3"

This reverts commit 840d0ae321ac6c5e12878acf5a38d1f023713018.

* Revert "run prettier with trailingComma: es5"

This reverts commit df8a16f5c4348a3be5d4ffeb2feb1a9822fa8ec9.

* bump mocha, dotenv and oclif core patch

* undo convert changes

--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-standard": "^5.0.0",
-    "husky": "^7.0.4",
+    "husky": "^9.1.7",
     "inquirer": "^8.0.0",
-    "lerna": "^6.4.1",
+    "lerna": "^8.0.2",
     "lint-staged": "^11.2.6",
-    "mocha": "^10.2.0",
+    "mocha": "^11.0.1",
     "prettier": "^2.8.3",
     "semver": "^7.3.8",
     "should": "^13"
@@ -33,7 +33,7 @@
     "lint-examples": "eslint examples",
     "validate": "lerna run validate",
     "bump": "./scripts/bump.js",
-    "prepare": "husky install",
+    "prepare": "husky",
     "generate-types": "cd schema-to-ts && yarn generate-types:build"
   },
   "husky": {
