--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -40,20 +40,20 @@
     "validate": "yarn test && yarn smoke-test && yarn lint"
   },
   "dependencies": {
-    "@oclif/core": "4.0.28",
-    "@oclif/plugin-autocomplete": "3.2.6",
-    "@oclif/plugin-help": "6.2.15",
-    "@oclif/plugin-not-found": "3.2.22",
-    "@oclif/plugin-version": "2.2.15",
-    "adm-zip": "0.5.10",
-    "archiver": "5.3.1",
-    "browserify": "17.0.0",
+    "@oclif/core": "4.0.34",
+    "@oclif/plugin-autocomplete": "3.2.11",
+    "@oclif/plugin-help": "6.2.18",
+    "@oclif/plugin-not-found": "3.2.29",
+    "@oclif/plugin-version": "2.2.16",
+    "adm-zip": "0.5.16",
+    "archiver": "7.0.1",
+    "browserify": "17.0.1",
     "chrono-node": "2.7.7",
-    "cli-table3": "0.6.3",
+    "cli-table3": "0.6.5",
     "colors": "1.4.0",
-    "debug": "4.3.4",
-    "dotenv": "16.4.5",
-    "fs-extra": "11.1.1",
+    "debug": "4.3.7",
+    "dotenv": "16.4.6",
+    "fs-extra": "11.2.0",
     "gulp-filter": "7.0.0",
     "gulp-prettier": "4.0.0",
     "ignore": "5.2.4",
@@ -62,22 +62,22 @@
     "klaw": "4.1.0",
     "lodash": "4.17.21",
     "luxon": "3.5.0",
-    "marked": "4.2.12",
-    "marked-terminal": "5.2.0",
+    "marked": "14.1.4",
+    "marked-terminal": "7.2.1",
     "minimatch": "9.0.3",
-    "node-fetch": "2.6.7",
+    "node-fetch": "2.7.0",
     "open": "10.1.0",
     "ora": "5.4.0",
     "parse-gitignore": "0.5.1",
     "prettier": "2.8.8",
-    "read": "2.1.0",
-    "semver": "7.5.2",
+    "read": "4.0.0",
+    "semver": "7.6.3",
     "string-length": "4.0.2",
     "through2": "4.0.2",
-    "tmp": "0.2.1",
-    "traverse": "0.6.7",
+    "tmp": "0.2.3",
+    "traverse": "0.6.10",
     "update-notifier": "5.1.0",
-    "yeoman-environment": "3.3.0",
+    "yeoman-environment": "3.19.3",
     "yeoman-generator": "5.9.0"
   },
   "devDependencies": {
@@ -88,7 +88,7 @@
     "decompress": "4.2.1",
     "mock-fs": "^5.2.0",
     "nock": "^13.3.1",
-    "oclif": "^4.15.1",
+    "oclif": "^4.15.30",
     "typescript": "^5.6.3",
     "yamljs": "0.3.0"
   },
@@ -97,15 +97,19 @@
   },
   "oclif": {
     "commands": "src/oclif/commands",
-    "additionalHelpFlags": ["-h"],
-    "additionalVersionFlags": ["-v"],
+    "additionalHelpFlags": [
+      "-h"
+    ],
+    "additionalVersionFlags": [
+      "-v"
+    ],
     "bin": "zapier",
     "dirname": "zapier",
     "plugins": [
-        "@oclif/plugin-autocomplete",
-        "@oclif/plugin-help",
-        "@oclif/plugin-not-found",
-        "@oclif/plugin-version"
+      "@oclif/plugin-autocomplete",
+      "@oclif/plugin-help",
+      "@oclif/plugin-not-found",
+      "@oclif/plugin-version"
     ],
     "hooks": {
       "init": [
