--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -47,12 +47,12 @@
     "@oclif/plugin-version": "2.2.16",
     "adm-zip": "0.5.16",
     "archiver": "7.0.1",
-    "browserify": "17.0.1",
     "chrono-node": "2.7.7",
     "cli-table3": "0.6.5",
     "colors": "1.4.0",
     "debug": "4.3.7",
     "dotenv": "16.4.6",
+    "esbuild": "0.24.2",
     "fs-extra": "11.2.0",
     "gulp-filter": "7.0.0",
     "gulp-prettier": "4.0.0",
